--- a/web-spring/src/main/resources/application.yml
+++ b/web-spring/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8080
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/bigdata?useUnicode=true&characterEncoding=utf-8
+    url: jdbc:mysql://localhost:3306/bigdata?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
     password: 123456
     hikari:
@@ -15,10 +15,23 @@ spring:
       password: 123456
       port: 27017
       uri: mongodb://127.0.0.1:27017/myfirstMongodb
+  thymeleaf:
+    prefix: classpath:/templates/
+    suffix: .html
+    encoding: utf-8
+    cache: false
+  resources:
+    chain:
+      strategy:
+        content:
+          enabled: true
+          paths: /**
 
 mybatis:
   type-aliases-package: com.van.webSpring.bean
   mapper-locations: classpath:mapper/*.xml
+
+
 
 
 
