--- a/web-spring/src/main/resources/application.yml
+++ b/web-spring/src/main/resources/application.yml
@@ -2,11 +2,14 @@ server:
   port: 8080
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/bigdata?useUnicode=true&characterEncoding=utf-8&useSSL=false
-    username: root
-    password: 123456
-    hikari:
-      driver-class-name: com.mysql.jdbc.Driver
+    type: com.alibaba.druid.pool.DruidDataSource
+
+#    url: jdbc:mysql://localhost:3306/bigdata?useUnicode=true&characterEncoding=utf-8&useSSL=false
+#    username: root
+#    password: 123456
+#    hikari:
+#      driver-class-name: com.mysql.jdbc.Driver
+
   data:
     mongodb:
       database: test
@@ -27,9 +30,33 @@ spring:
           enabled: true
           paths: /**
 
+##默认数据库
+master:
+  datasource:
+    url: jdbc:mysql://localhost:3306/bigdata?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    username: root
+    password: 123456
+    driver-class-name: com.mysql.jdbc.Driver
+    type: com.alibaba.druid.pool.DruidDataSource
+
+
+##另一个数据库
+cluster:
+  datasource:
+      url: jdbc:mysql://10.211.55.9:3306/van?useUnicode=true&characterEncoding=utf-8&useSSL=false
+      username: root
+      password: 123456
+      driver-class-name: com.mysql.jdbc.Driver
+      type: com.alibaba.druid.pool.DruidDataSource
+
 mybatis:
   type-aliases-package: com.van.webSpring.bean
-  mapper-locations: classpath:mapper/*.xml
+  mapper-locations: classpath*:mapper/**/*.xml
+
+## 打印SQL语句
+#logging:
+#  pattern: com.van.webSpring.dao
+#  level: debug
 
 
 
